# dagster-user-code

./: Dockerfile  README.md  pyproject.toml
test_project/: workspace.yaml
test_project/run_config/: celery_k8s.yaml  celery_k8s_grpc.yaml  pipeline.yaml
test_project/test_repo/: celery_pipeline.py  connecting_solids_pipeline.py  repo.py  repos.py  single_solid_pipeline.py  test_vault_pipeline.py  workspace.yaml
