[tool.poetry]
name = "dagster-user-code"
version = "0.1.0"
description = "Repo for Docker image and local development."
authors = ["Jitse-Jan <code@jitsejan.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.11.16"
dagit = "^0.11.16"
requests = "^2.25.1"
dagster-celery-k8s = "^0.11.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
